savio_scripts/run-reports/slurm-9836795.out
  File "/global/home/users/worsham/eastriver/Watershed_Spatial_Dataset/LiDAR/00_chunkwf.py", line 37
    
                                  ^
SyntaxError: unexpected EOF while parsing
